--- a/tools/kevscript/tsconfig.json
+++ b/tools/kevscript/tsconfig.json
@@ -1,23 +1,22 @@
 {
-    "version": "1.5.0-beta",
     "compilerOptions": {
         "target": "es5",
         "module": "commonjs",
+        "moduleResolution": "node",
         "isolatedModules": false,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
-        "declaration": false,
+        "declaration": true,
         "noImplicitAny": true,
         "removeComments": true,
         "noLib": false,
         "preserveConstEnums": true,
         "suppressImplicitAnyIndexErrors": true,
-        "outDir": "build"
+        "outDir": "built"
     },
     "filesGlob": [
-        "./src/**/*.ts",
-        "./typings/**/*.d.ts",
-        "!./node_modules/**/*"
+        "src/**/*.ts",
+        "typings/**/*.d.ts"
     ],
     "files": [
         "./src/main/KevScript.ts",
