--- a/libs/comps/ticker/package.json
+++ b/libs/comps/ticker/package.json
@@ -5,6 +5,8 @@
   "kevoree": {
     "namespace": "kevoree"
   },
-  "dependencies": [],
-  "devDependencies": []
+  "dependencies": {
+    "ts-injector": "^1.0.0"
+  },
+  "devDependencies": {}
 }
