--- a/tools/gen-model/package.json
+++ b/tools/gen-model/package.json
@@ -15,6 +15,7 @@
   "license": "LGPL-3.0",
   "dependencies": {
     "is-my-json-valid": "^2.12.1",
-    "reflect-metadata": "^0.1.0"
+    "reflect-metadata": "^0.1.3",
+    "ts-injector": "^1.0.0"
   }
 }
