--- a/tools/gen-model/package.json
+++ b/tools/gen-model/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "kevoree-gen-model": "./bin/cli.js"
+  },
   "keywords": [
     "kevoree",
     "model",
@@ -15,6 +18,7 @@
   "license": "LGPL-3.0",
   "dependencies": {
     "is-my-json-valid": "^2.12.1",
+    "minimist": "^1.2.0",
     "reflect-metadata": "^0.1.3",
     "ts-injector": "^1.0.0"
   }
