--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -49,6 +49,7 @@
         "src/main/services/Injectables.ts",
         "src/main/services/ModelService.ts",
         "src/main/TypeEnum.ts",
+        "src/main/util/InstanceFactory.ts",
         "src/main/util/lifecycleMethod.ts",
         "src/main/util/typeDefinition.ts",
         "src/test/inputs.ts",
