--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "Kevoree component library",
   "main": "built/main/kevoree-api.js",
   "dependencies": {
-    "reflect-metadata": "^0.1.3"
+    "reflect-metadata": "^0.1.3",
+    "ts-injector": "^1.0.0"
   },
   "typings": "built/main/kevoree-api.d.ts",
   "devDependencies": {},
