--- a/libs/comps/consoleprinter/package.json
+++ b/libs/comps/consoleprinter/package.json
@@ -5,6 +5,9 @@
   "kevoree": {
     "namespace": "kevoree"
   },
-  "dependencies": [],
-  "devDependencies": []
+  "scripts": {
+    "test": "mocha built/test"
+  },
+  "dependencies": {},
+  "devDependencies": {}
 }
