--- a/libs/comps/ticker/package.json
+++ b/libs/comps/ticker/package.json
@@ -5,8 +5,6 @@
   "kevoree": {
     "namespace": "kevoree"
   },
-  "dependencies": {
-    "ts-injector": "^1.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {}
 }
