first implem of component UI using React

--- a/libs/comps/consoleprinter/tsconfig.json
+++ b/libs/comps/consoleprinter/tsconfig.json
@@ -1,29 +1,33 @@
 {
-    "compilerOptions": {
-        "target": "es5",
-        "module": "commonjs",
-        "moduleResolution": "node",
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-        "noImplicitAny": true,
-        "removeComments": true,
-        "preserveConstEnums": true,
-        "suppressImplicitAnyIndexErrors": true,
-        "outDir": "built"
-    },
-    "filesGlob": [
-        "src/**/*.ts",
-        "typings/main.d.ts"
-    ],
-    "files": [
-        "src/main/ConsolePrinter.ts",
-        "src/test/ContextServiceImpl.ts",
-        "src/test/ModelServiceImpl.ts",
-        "src/test/OutputPortImpl.ts",
-        "src/test/test.ts",
-        "typings/main.d.ts"
-    ],
-    "atom": {
-        "rewriteTsconfig": true
-    }
+  "compilerOptions": {
+    "target": "es5",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "jsx": "react",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "noImplicitAny": true,
+    "removeComments": true,
+    "preserveConstEnums": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "outDir": "built"
+  },
+  "filesGlob": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "typings/main.d.ts"
+  ],
+  "files": [
+    "src/test/ContextServiceImpl.ts",
+    "src/test/ModelServiceImpl.ts",
+    "src/test/OutputPortImpl.ts",
+    "src/test/test.ts",
+    "src/main/ConsolePrinter.tsx",
+    "src/main/ConsolePrinterUI.tsx",
+    "src/test/browser.tsx",
+    "typings/main.d.ts"
+  ],
+  "atom": {
+    "rewriteTsconfig": true
+  }
 }
