--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -8,7 +8,7 @@
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "noImplicitAny": true,
-        "removeComments": true,
+        "removeComments": false,
         "declaration": true,
         "noLib": false,
         "preserveConstEnums": true,
