--- a/libs/comps/ticker/tsconfig.json
+++ b/libs/comps/ticker/tsconfig.json
@@ -18,11 +18,11 @@
         "typings/main.d.ts"
     ],
     "files": [
+        "src/main/Ticker.ts",
         "src/test/ContextServiceImpl.ts",
         "src/test/ModelServiceImpl.ts",
         "src/test/OutputPortImpl.ts",
         "src/test/test.ts",
-        "src/main/Ticker.tsx",
         "src/main/TickerUI.tsx",
         "src/test/browser.tsx",
         "typings/main.d.ts"
