--- a/libs/comps/consoleprinter/tsconfig.json
+++ b/libs/comps/consoleprinter/tsconfig.json
@@ -18,11 +18,11 @@
     "typings/main.d.ts"
   ],
   "files": [
+    "src/main/ConsolePrinter.ts",
     "src/test/ContextServiceImpl.ts",
     "src/test/ModelServiceImpl.ts",
     "src/test/OutputPortImpl.ts",
     "src/test/test.ts",
-    "src/main/ConsolePrinter.tsx",
     "src/main/ConsolePrinterUI.tsx",
     "src/test/browser.tsx",
     "typings/main.d.ts"
