--- a/runtimes/browser/package.json
+++ b/runtimes/browser/package.json
@@ -9,14 +9,21 @@
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "license": "LGPL-3.0",
   "dependencies": {
+    "font-awesome": "^4.5.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-grid-layout": "^0.11.3",
-    "react-router": "^2.0.0"
+    "react-router": "^2.0.0",
+    "skeleton-css": "^2.0.4"
   },
   "devDependencies": {
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
     "typescript": "^1.8.9",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
   }
