--- a/runtimes/browser/tsconfig.json
+++ b/runtimes/browser/tsconfig.json
@@ -27,8 +27,8 @@
         "typings/main.d.ts",
         "!node_modules/**"
     ],
-    "compileOnSave": true,
-    "buildOnSave": true,
+    "compileOnSave": false,
+    "buildOnSave": false,
     "atom": {
         "rewriteTsconfig": true
     },
@@ -36,12 +36,12 @@
         "src/test/test.ts",
         "src/typings/react-grid-layout.d.ts",
         "src/main/app/App.tsx",
-        "src/main/app/components/Component.tsx",
-        "src/main/app/components/Components.tsx",
-        "src/main/app/dashboard/Dashboard.tsx",
-        "src/main/app/home/Home.tsx",
-        "src/main/app/settings/Settings.tsx",
-        "src/main/app/util/NavLink.tsx",
+        "src/main/app/components/AppBar.tsx",
+        "src/main/app/components/GridLayout.tsx",
+        "src/main/app/components/NavLink.tsx",
+        "src/main/app/routes/dashboard/Dashboard.tsx",
+        "src/main/app/routes/home/Home.tsx",
+        "src/main/app/routes/settings/Settings.tsx",
         "src/main/index.tsx",
         "typings/main.d.ts"
     ]
