--- a/runtimes/browser/package.json
+++ b/runtimes/browser/package.json
@@ -20,6 +20,7 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "postcss-loader": "^0.8.2",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
     "typescript": "^1.8.9",
