--- a/runtimes/browser/tsconfig.json
+++ b/runtimes/browser/tsconfig.json
@@ -33,12 +33,14 @@
         "rewriteTsconfig": true
     },
     "files": [
+        "src/main/app/api/Component.ts",
         "src/test/test.ts",
         "src/typings/react-grid-layout.d.ts",
         "src/main/app/App.tsx",
-        "src/main/app/components/AppBar.tsx",
+        "src/main/app/components/app-bar/AppBar.tsx",
         "src/main/app/components/GridLayout.tsx",
         "src/main/app/components/NavLink.tsx",
+        "src/main/app/components/Tile.tsx",
         "src/main/app/routes/dashboard/Dashboard.tsx",
         "src/main/app/routes/home/Home.tsx",
         "src/main/app/routes/settings/Settings.tsx",
