--- a/runtimes/browser/tsconfig.json
+++ b/runtimes/browser/tsconfig.json
@@ -34,13 +34,16 @@
     },
     "files": [
         "src/main/app/api/Component.ts",
+        "src/main/app/api/LayoutDesc.ts",
+        "src/main/app/stores/index.ts",
         "src/test/test.ts",
         "src/typings/react-grid-layout.d.ts",
+        "src/typings/react-menu.d.ts",
         "src/main/app/App.tsx",
         "src/main/app/components/app-bar/AppBar.tsx",
         "src/main/app/components/GridLayout.tsx",
         "src/main/app/components/NavLink.tsx",
-        "src/main/app/components/Tile.tsx",
+        "src/main/app/components/tile/Tile.tsx",
         "src/main/app/routes/dashboard/Dashboard.tsx",
         "src/main/app/routes/home/Home.tsx",
         "src/main/app/routes/settings/Settings.tsx",
