--- a/runtimes/browser/tsconfig.json
+++ b/runtimes/browser/tsconfig.json
@@ -33,12 +33,28 @@
         "rewriteTsconfig": true
     },
     "files": [
+        "src/main/app/actions/Action.ts",
+        "src/main/app/actions/ActionColsChange.ts",
+        "src/main/app/actions/ActionLayoutChange.ts",
+        "src/main/app/actions/Actions.ts",
+        "src/main/app/actions/ActionToggleComponent.ts",
+        "src/main/app/actions/index.ts",
         "src/main/app/api/Component.ts",
+        "src/main/app/api/Context.ts",
+        "src/main/app/api/index.ts",
         "src/main/app/api/LayoutDesc.ts",
+        "src/main/app/api/State.ts",
+        "src/main/app/reducers/colsChange.ts",
+        "src/main/app/reducers/component.ts",
+        "src/main/app/reducers/layoutChange.ts",
         "src/main/app/stores/index.ts",
+        "src/main/app/util/Random.ts",
+        "src/main/app/util/ReactComponent.ts",
         "src/test/test.ts",
         "src/typings/react-grid-layout.d.ts",
         "src/typings/react-menu.d.ts",
+        "src/typings/react-redux.d.ts",
+        "src/typings/redux.d.ts",
         "src/main/app/App.tsx",
         "src/main/app/components/app-bar/AppBar.tsx",
         "src/main/app/components/GridLayout.tsx",
