--- a/runtimes/browser/tsconfig.json
+++ b/runtimes/browser/tsconfig.json
@@ -37,28 +37,31 @@
         "src/main/app/actions/ActionColsChange.ts",
         "src/main/app/actions/ActionLayoutChange.ts",
         "src/main/app/actions/Actions.ts",
+        "src/main/app/actions/ActionToggleAppBar.ts",
         "src/main/app/actions/ActionToggleComponent.ts",
         "src/main/app/actions/ActionToggleComponentMenu.ts",
         "src/main/app/actions/index.ts",
+        "src/main/app/api/AppBar.ts",
         "src/main/app/api/Component.ts",
         "src/main/app/api/Context.ts",
         "src/main/app/api/index.ts",
         "src/main/app/api/LayoutDesc.ts",
         "src/main/app/api/State.ts",
+        "src/main/app/components/AbstractComponent.ts",
+        "src/main/app/reducers/appbar.ts",
         "src/main/app/reducers/cols.ts",
         "src/main/app/reducers/components.ts",
         "src/main/app/reducers/index.ts",
         "src/main/app/reducers/layouts.ts",
         "src/main/app/stores/index.ts",
         "src/main/app/util/Random.ts",
-        "src/main/app/util/ReactComponent.ts",
         "src/test/test.ts",
         "src/typings/react-grid-layout.d.ts",
         "src/typings/react-menu.d.ts",
         "src/typings/react-redux.d.ts",
-        "src/typings/react-router-redux.d.ts",
         "src/typings/redux.d.ts",
         "src/main/app/App.tsx",
+        "src/main/app/components/action-bar/ActionBar.tsx",
         "src/main/app/components/app-bar/AppBar.tsx",
         "src/main/app/components/GridLayout.tsx",
         "src/main/app/components/NavLink.tsx",
