--- a/runtimes/browser/package.json
+++ b/runtimes/browser/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "es6-shim": "^0.35.0",
     "font-awesome": "^4.5.0",
+    "radium": "^0.17.1",
     "react": "^0.14.8",
     "react-dom": "^15.0.1",
     "react-grid-layout": "^0.11.3",
@@ -23,7 +24,6 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
-    "postcss-loader": "^0.8.2",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
     "typescript": "^1.8.9",
