--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -7,7 +7,7 @@
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "noImplicitAny": true,
-        "removeComments": true,
+        "removeComments": false,
         "declaration": true,
         "noLib": false,
         "preserveConstEnums": true,
