--- a/libs/comps/consoleprinter/tsconfig.json
+++ b/libs/comps/consoleprinter/tsconfig.json
@@ -8,6 +8,7 @@
     "emitDecoratorMetadata": true,
     "noImplicitAny": true,
     "removeComments": true,
+    "declaration": true,
     "preserveConstEnums": true,
     "suppressImplicitAnyIndexErrors": true,
     "outDir": "built"
