update browser runtime

--- a/runtimes/browser/tsconfig.json
+++ b/runtimes/browser/tsconfig.json
@@ -43,7 +43,6 @@
         "src/main/app/actions/Actions.ts",
         "src/main/app/actions/ActionToggleAppBar.ts",
         "src/main/app/actions/ActionToggleComponent.ts",
-        "src/main/app/actions/ActionToggleComponentMenu.ts",
         "src/main/app/actions/index.ts",
         "src/main/app/api/AppBar.ts",
         "src/main/app/api/Component.ts",
@@ -72,6 +71,7 @@
         "src/main/app/App.tsx",
         "src/main/app/components/action-bar/ActionBar.tsx",
         "src/main/app/components/app-bar/AppBar.tsx",
+        "src/main/app/components/Button.tsx",
         "src/main/app/components/GridLayout.tsx",
         "src/main/app/components/NavLink.tsx",
         "src/main/app/components/tile/Tile.tsx",
