update messaging api

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -42,16 +42,17 @@
         "src/main/annotations/types/Component.ts",
         "src/main/annotations/types/ModelConnector.ts",
         "src/main/annotations/types/Node.ts",
+        "src/main/api/Callback.ts",
+        "src/main/api/InputPort.ts",
+        "src/main/api/MetaData.ts",
         "src/main/api/OutputPort.ts",
-        "src/main/Callback.ts",
+        "src/main/api/TypeEnum.ts",
         "src/main/es5/factory.ts",
         "src/main/kevoree-api.ts",
-        "src/main/MetaData.ts",
         "src/main/services/ChannelService.ts",
         "src/main/services/ContextService.ts",
         "src/main/services/ModelService.ts",
         "src/main/services/Services.ts",
-        "src/main/TypeEnum.ts",
         "src/main/util/lifecycleMethod.ts",
         "src/main/util/typeDefinition.ts",
         "src/test/inputs.ts",
