--- a/libs/comps/consoleprinter/tsconfig.json
+++ b/libs/comps/consoleprinter/tsconfig.json
@@ -22,10 +22,9 @@
     "src/main/ConsolePrinter.ts",
     "src/test/ContextServiceImpl.ts",
     "src/test/ModelServiceImpl.ts",
-    "src/test/OutputPortImpl.ts",
     "src/test/test.ts",
+    "src/browser/browser.tsx",
     "src/main/ConsolePrinterUI.tsx",
-    "src/test/browser.tsx",
     "typings/main.d.ts"
   ],
   "atom": {
