--- a/libs/comps/ticker/package.json
+++ b/libs/comps/ticker/package.json
@@ -11,9 +11,14 @@
     "test": "tsc && mocha built/test",
     "browser": "webpack-dev-server --inline --content-base ."
   },
-  "dependencies": {},
+  "dependencies": {
+    "kevoree-api": "^1.0.0",
+    "kevoree-ui": "^1.0.0"
+  },
   "devDependencies": {
     "react": "^15.0.1",
+    "ts-loader": "^0.8.2",
+    "typescript": "^1.8.10",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
   }
