--- a/libs/comps/consoleprinter/tsconfig.json
+++ b/libs/comps/consoleprinter/tsconfig.json
@@ -19,6 +19,7 @@
     "typings/main.d.ts"
   ],
   "files": [
+    "src/browser/bundle.ts",
     "src/main/ConsolePrinter.ts",
     "src/test/ContextServiceImpl.ts",
     "src/test/ModelServiceImpl.ts",
