--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -10,6 +10,7 @@
         "removeComments": false,
         "declaration": true,
         "noLib": false,
+        "sourceMap": false,
         "preserveConstEnums": true,
         "suppressImplicitAnyIndexErrors": true,
         "outDir": "built"
@@ -19,21 +20,20 @@
         "typings/main.d.ts"
     ],
     "files": [
+        "src/main/annotations/lifecycles/lifecycleMethod.ts",
         "src/main/annotations/lifecycles/OnMessage.ts",
         "src/main/annotations/lifecycles/OnStart.ts",
         "src/main/annotations/lifecycles/OnStop.ts",
         "src/main/annotations/lifecycles/OnUpdate.ts",
-        "src/main/annotations/metas/LengthMeta.ts",
         "src/main/annotations/metas/LifecycleMeta.ts",
-        "src/main/annotations/metas/MinMaxMeta.ts",
-        "src/main/annotations/metas/NumberTypeMeta.ts",
+        "src/main/annotations/metas/ParamMeta.ts",
         "src/main/annotations/metas/TypeMeta.ts",
+        "src/main/annotations/params/Choices.ts",
         "src/main/annotations/params/Fragment.ts",
         "src/main/annotations/params/Length.ts",
         "src/main/annotations/params/Max.ts",
         "src/main/annotations/params/Min.ts",
         "src/main/annotations/params/Multiline.ts",
-        "src/main/annotations/params/NumberType.ts",
         "src/main/annotations/params/Param.ts",
         "src/main/annotations/params/Required.ts",
         "src/main/annotations/ports/Input.ts",
@@ -42,6 +42,7 @@
         "src/main/annotations/types/Component.ts",
         "src/main/annotations/types/ModelConnector.ts",
         "src/main/annotations/types/Node.ts",
+        "src/main/annotations/types/typeDefinition.ts",
         "src/main/api/Callback.ts",
         "src/main/api/InputPort.ts",
         "src/main/api/MetaData.ts",
@@ -49,17 +50,21 @@
         "src/main/api/TypeEnum.ts",
         "src/main/es5/factory.ts",
         "src/main/kevoree-api.ts",
+        "src/main/reflect/ParamDetails.ts",
+        "src/main/reflect/ReflectUtils.ts",
         "src/main/services/ChannelService.ts",
         "src/main/services/ContextService.ts",
         "src/main/services/ModelService.ts",
         "src/main/services/Services.ts",
-        "src/main/util/lifecycleMethod.ts",
-        "src/main/util/typeDefinition.ts",
-        "src/test/inputs.ts",
-        "src/test/lifecycles.ts",
-        "src/test/outputs.ts",
-        "src/test/params.ts",
-        "src/test/types.ts",
+        "src/test/annotations/inputs.ts",
+        "src/test/annotations/lifecycles.ts",
+        "src/test/annotations/outputs.ts",
+        "src/test/annotations/params.ts",
+        "src/test/annotations/types.ts",
+        "src/test/reflect/callOnStart.ts",
+        "src/test/reflect/callOnStop.ts",
+        "src/test/reflect/callOnUpdate.ts",
+        "src/test/reflect/getParams.ts",
         "typings/main.d.ts"
     ],
     "atom": {
