--- a/tools/gen-model/package.json
+++ b/tools/gen-model/package.json
@@ -4,7 +4,7 @@
   "description": "Kevoree model generator",
   "main": "build/main/GenModel.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "tsc -p ."
   },
   "bin": {
     "kevoree-gen-model": "./bin/cli.js"
@@ -23,5 +23,8 @@
     "minimist": "^1.2.0",
     "reflect-metadata": "^0.1.3",
     "ts-injector": "^1.0.0"
+  },
+  "devDependencies": {
+    "typescript": "^1.8.10"
   }
 }
