improve es5 factory

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -61,6 +61,7 @@
         "src/test/annotations/outputs.ts",
         "src/test/annotations/params.ts",
         "src/test/annotations/types.ts",
+        "src/test/es5/test.ts",
         "src/test/reflect/callOnStart.ts",
         "src/test/reflect/callOnStop.ts",
         "src/test/reflect/callOnUpdate.ts",
