--- a/libs/comps/es5-consoleprinter/package.json
+++ b/libs/comps/es5-consoleprinter/package.json
@@ -11,7 +11,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "gen-model": "kevoree-gen-model"
   },
   "keywords": [
     "kevoree",
